--- a/src/index.css
+++ b/src/index.css
@@ -212,6 +212,10 @@
     --color-new-note-content-placholder-color
   );
   --color-error: var(--color-error);
+  --color-focus-ring: var(--color-focus-ring);
+  --color-tooltip-background: var(--color-tooltip-background);
+  --color-tooltip-text: var(--color-tooltip-text);
+  --color-spinner-color: var(--color-spinner-color);
   --text-new-note-text-fontSize: var(--text-new-note-text-fontSize);
   --text-new-note-title-placeholder-text: var(
     --text-new-note-title-placeholder-text
@@ -350,6 +354,10 @@
   --color-new-note-last-edited-text-color: var(--color-neutral-400);
   --color-new-input-text-color: var(--color-neutral-950);
   --color-new-note-content-placholder-color: var(--color-neutral-700);
+  --color-tooltip-background: var(--color-black);
+  --color-tooltip-text: var(--color-white);
+  --color-focus-ring: var(--color-neutral-500);
+  --color-spinner-color: var(--color-neutral-950);
   --text-new-note-text-fontSize: 0.75rem;
   --text-new-note-title-placeholder-text: 1.25rem;
   --leading-new-note-text-lineHeight: 1.2;
@@ -414,6 +422,10 @@
   --color-new-note-last-edited-text-color: var(--color-neutral-300);
   --color-new-input-text-color: var(--color-white);
   --color-new-note-content-placholder-color: var(--color-neutral-100);
+  --color-spinner-color: var(--color-white);
+  --color-tooltip-background: var(--color-white);
+  --color-tooltip-text: var(--color-black);
+  --color-focus-ring: var(--color-neutral-800);
   --text-new-note-title-placeholder-text: 1.5rem;
   --text-new-note-text-fontSize: 0.875rem;
   --leading-new-note-text-lineHeight: 1.3;
@@ -433,9 +445,65 @@
 }
 
 /* for the dark mode archived date text */
-
 .notAllNotesPage {
   --color-text-secondary: var(--color-neutral-200);
   --color-bg-tag: var(--color-neutral-700);
   --color-button-secondary-background: var(--color-neutral-300);
+}
+
+.save-btn-wrapper::before,
+.save-btn-wrapper::after {
+  --scale: 0;
+  --arrow-size: 10px;
+
+  display: block;
+  position: absolute;
+  bottom: -0.5rem;
+  left: 50%;
+  transform: translateX(-50%) translateY(var(--translate-y)) scale(var(--scale));
+  transition: 150ms transform;
+  z-index: 10;
+}
+
+.save-btn-wrapper:hover::before,
+.save-btn-wrapper:hover::after,
+.save-btn-wrapper:focus::before,
+.save-btn-wrapper:focus::after {
+  --scale: 1;
+}
+
+.save-btn-wrapper:hover::before,
+.save-btn-wrapper:focus::before {
+  --translate-y: calc(100% + var(--arrow-size));
+  text-align: center;
+  content: attr(data-tooltip);
+  color: var(--color-tooltip-text);
+  background-color: var(--color-tooltip-background);
+  width: max-content;
+  max-width: 100%;
+  font-size: 12px;
+  padding: 0.5rem;
+  border-radius: 0.3rem;
+  transform-origin: top center;
+}
+
+.save-btn-wrapper:hover::after,
+.save-btn-wrapper:focus::after {
+  transform-origin: bottom center;
+  content: "";
+  --translate-y: calc(var(--arrow-size));
+  border: 10px solid transparent;
+  border-bottom-color: var(--color-tooltip-background);
+}
+
+.spinner {
+  background: conic-gradient(#0000 10%, var(--color-spinner-color));
+  -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
+  animation: rotate 1.5s infinite linear;
+}
+
+@keyframes rotate {
+  to {
+    transform: rotate(1turn);
+  }
 }
